--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="btn btn-outline-success TwentySymbolGenerator" >Generate Password</button>
             </div>
         </div>
-        <div>
+        <div class="col-lg-12 col-md-12">
             <h2 class="PasswordText"></h2>
         </div>
 
